force-app/main/default/objects/TODO__c/TODO__c.object-meta.xml
<CustomObject>
    <label>TODO</label>
    <nameField>
        <displayFormat>TODO-{0000}</displayFormat>
        <label>TODO Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TODOs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>