force-app/main/default/objects/TODO__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Task</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>